[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tile.png" type="Texture" id=1]
[ext_resource path="res://scenes/Tile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpritePop" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="SpritePop"]
playback_process_mode = 0

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
